[package]
name = "jufo-video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
eframe = "0.24.1"
egui = "0.24.1"
env_logger = "0.10.1"
futures = "0.3.30"
image = "0.24.7"
itertools = "0.12.0"
rfd = "0.12.1"
tempdir = "0.3.7"
tokio = { version = "1.35.1", features = ["full"] }
